--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^4.2.7"
-decouple = "^0.0.7"
+python-decouple = "^3.8"
 
 
 [build-system]
