--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^4.2.7"
+decouple = "^0.0.7"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
